--- a/mod_1/1Fundamentos/3_Into_HTML_CSS/Dia3/parte4/index4.html
+++ b/mod_1/1Fundamentos/3_Into_HTML_CSS/Dia3/parte4/index4.html
@@ -2,22 +2,22 @@
 <html lang="pt-br">
   <head>
     <meta charset="UTF-8">
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="style4.css">
     <title>#GoTrybe</title>
   </head>
   <body>
-    <h1><em>Combinações e Classes Descendentes</em></h1>
+    <h1 class="fonte"><em>Combinações e Classes Descendentes</em></h1>
     <br />
     <h3>Top 5 frases memoráveis:</h3>
-    <ol>
-      <li><em>Com grandes poderes vêm grandes responsabilidades.</em> - Tio Ben (Homem Aranha)</li>
-      <li><em>Houston, temos um problema.</em> - Jack Swigert</li>
-      <li><em>Sempre parece impossível até que esteja feito.</em> - Nelson Mandela</li>
-      <li><em>Parte da jornada é o fim.</em> - Tony Stark (Homem de Ferro)</li>
-      <li><em>Às vezes, o melhor que podemos fazer é começar novamente.</em> - Steve Rogers (Capitão América)</li>
+    <ol class="fonte2">
+      <li class="impar"><em>Com grandes poderes vêm grandes responsabilidades.</em> - Tio Ben (Homem Aranha)</li>
+      <li class="par"><em>Houston, temos um problema.</em> - Jack Swigert</li>
+      <li class="impar"><em>Sempre parece impossível até que esteja feito.</em> - Nelson Mandela</li>
+      <li class="par"><em>Parte da jornada é o fim.</em> - Tony Stark (Homem de Ferro)</li>
+      <li class="impar"><em>Às vezes, o melhor que podemos fazer é começar novamente.</em> - Steve Rogers (Capitão América)</li>
     </ol>
     <h3>As maiores linguagens de programação:</h3>
-    <ul>
+    <ul class="fonte2">
       <li>Python</li>
       <li>Java</li>
       <li>JavaScript</li>
@@ -25,7 +25,7 @@
       <li>C / C++</li>
     </ul>
     <h3>Maiores aliados de uma pessoa desenvolvedora:</h3>
-    <ul>
+    <ul class="fonte2">
       <li>
         <a href="https://pt.stackoverflow.com/" target="_blank">StackOverflow</a>
       </li>
